# AutoMoDe-phormica-habanero

./: AutoMoDeController.cpp  AutoMoDeController.h  AutoMoDeMain.cpp  CMakeLists.txt  LICENSE  README.asciidoc  README.md  argos_main_for_automode.cpp  automode_experiment.argos  automode_test.argos  automode_test2.argos  grammar_generator.sh
experiments/: automode_aggregation.xml  automode_aggregation_visu.xml  automode_experiment.argos  automode_optimization.argos  automode_test.argos  automode_test2.argos
experiments/chocolate/: chocolate_aac_visu.xml  chocolate_cfa_visu.xml  chocolate_lcn_visu.xml  chocolate_sca_visu.xml  chocolate_spc_visu.xml
experiments/example/: automode_aggregation_visu.xml  example_aggregation_visu.argos  example_aggregation_visu.xml
finite_state_machine/: AutoMoDeFiniteStateMachine.cpp  AutoMoDeFiniteStateMachine.h  AutoMoDeFsmBuilder.cpp  AutoMoDeFsmBuilder.h  AutoMoDeFsmHistory.cpp  AutoMoDeFsmHistory.h  AutoMoDeRabBuffer.cpp  AutoMoDeRabBuffer.h  AutoMoDeRobotDAO.cpp  AutoMoDeRobotDAO.h
loop-functions/: CMakeLists.txt
loop-functions/chocolate/: CMakeLists.txt
loop-functions/chocolate/AAC/: ChocolateAACLoopFunc.cpp  ChocolateAACLoopFunc.h
loop-functions/chocolate/CFA/: ChocolateCFALoopFunc.cpp  ChocolateCFALoopFunc.h
loop-functions/chocolate/LCN/: ChocolateLCNLoopFunc.cpp  ChocolateLCNLoopFunc.h
loop-functions/chocolate/SCA/: ChocolateSCALoopFunc.cpp  ChocolateSCALoopFunc.h
loop-functions/chocolate/SPC/: ChocolateSPCLoopFunc.cpp  ChocolateSPCLoopFunc.h
loop-functions/example/: AggregationLoopFunc.cpp  AggregationLoopFunc.h  ExampleAggregationLoopFunc.cpp  ExampleAggregationLoopFunc.h
loop_functions/: AggregationLoopFunc.cpp  AggregationLoopFunc.h  AutoMoDeLoopFunctions.cpp  AutoMoDeLoopFunctions.h  BlackSpotLoopFunc.cpp  BlackSpotLoopFunc.h  CMakeLists.txt
loop_functions/example/: AggregationLoopFunc.h  CMakeLists.txt
modules/: AutoMoDeBehaviour.cpp  AutoMoDeBehaviour.h  AutoMoDeBehaviourAntiPhotoaxis.cpp  AutoMoDeBehaviourAntiPhotoaxis.h  AutoMoDeBehaviourAntiPhototaxis.cpp  AutoMoDeBehaviourAttraction.cpp  AutoMoDeBehaviourAttraction.h  AutoMoDeBehaviourExploration.cpp  AutoMoDeBehaviourExploration.h  AutoMoDeBehaviourPhotoaxis.cpp  AutoMoDeBehaviourPhotoaxis.h  AutoMoDeBehaviourPhototaxis.cpp  AutoMoDeBehaviourPhototaxis.h  AutoMoDeBehaviourRepulsion.cpp  AutoMoDeBehaviourRepulsion.h  AutoMoDeBehaviourStop.cpp  AutoMoDeBehaviourStop.h  AutoMoDeCondition.cpp  AutoMoDeCondition.h  AutoMoDeConditionBlackFloor.cpp  AutoMoDeConditionBlackFloor.h  AutoMoDeConditionFixedProbability.cpp  AutoMoDeConditionFixedProbability.h  AutoMoDeConditionGrayFloor.cpp  AutoMoDeConditionGrayFloor.h  AutoMoDeConditionInvertedNeighborsCount.cpp  AutoMoDeConditionInvertedNeighborsCount.h  AutoMoDeConditionNeighborsCount.cpp  AutoMoDeConditionNeighborsCount.h  AutoMoDeConditionWhiteFloor.cpp  AutoMoDeConditionWhiteFloor.h
optimization/: grammar.txt  instance-multiplier  scenario.txt  target-runner
optimization/example/: forbidden_config.txt  forbidden_config_generator.sh  grammar_generator.sh  scenario.txt  target-runner  test_grammar.txt
optimization/example/experiments-folder/: automode_aggregation.xml  example_aggregation.argos
src/: AutoMoDeController.h  AutoMoDeMain.cpp  AutoMoDeVisualizeFSM.cpp  CMakeLists.txt  RealLibrary.cmake  SimLibrary.cmake
src/cmake/: ARGoSBuildChecks.cmake
src/core/: AutoMoDeController.cpp  AutoMoDeController.h  AutoMoDeFiniteStateMachine.cpp  AutoMoDeFiniteStateMachine.h  AutoMoDeFsmBuilder.cpp  AutoMoDeFsmBuilder.h  AutoMoDeFsmHistory.cpp  AutoMoDeFsmHistory.h  AutoMoDeLoopFunctions.cpp  AutoMoDeLoopFunctions.h  AutoMoDeRabBuffer.cpp  AutoMoDeRabBuffer.h  AutoMoDeRobotDAO.cpp  AutoMoDeRobotDAO.h
src/modules/: AutoMoDeBehaviour.cpp  AutoMoDeBehaviour.h  AutoMoDeBehaviourAntiPhototaxis.cpp  AutoMoDeBehaviourAntiPhototaxis.h  AutoMoDeBehaviourAttraction.cpp  AutoMoDeBehaviourAttraction.h  AutoMoDeBehaviourAvoidPheromone.cpp  AutoMoDeBehaviourAvoidPheromone.h  AutoMoDeBehaviourExploration.cpp  AutoMoDeBehaviourExploration.h  AutoMoDeBehaviourGoAwayColor.cpp  AutoMoDeBehaviourGoAwayColor.h  AutoMoDeBehaviourGoToColor.cpp  AutoMoDeBehaviourGoToColor.h  AutoMoDeBehaviourGoToPheromone.cpp  AutoMoDeBehaviourGoToPheromone.h  AutoMoDeBehaviourPhototaxis.cpp  AutoMoDeBehaviourRepulsion.cpp  AutoMoDeBehaviourRepulsion.h  AutoMoDeBehaviourStop.cpp  AutoMoDeBehaviourStop.h  AutoMoDeBehaviourTuttiExploration.cpp  AutoMoDeBehaviourTuttiExploration.h  AutoMoDeBehaviourTuttiGoAwayColor.cpp  AutoMoDeBehaviourTuttiGoAwayColor.h  AutoMoDeBehaviourTuttiGoToColor.cpp  AutoMoDeBehaviourTuttiGoToColor.h  AutoMoDeBehaviourTuttiStop.cpp  AutoMoDeBehaviourTuttiStop.h  AutoMoDeBehaviourTuttiWaggle.cpp  AutoMoDeBehaviourTuttiWaggle.h  AutoMoDeBehaviourWaggle.cpp  AutoMoDeBehaviourWaggle.h  AutoMoDeCondition.cpp  AutoMoDeCondition.h  AutoMoDeConditionBlackFloor.cpp  AutoMoDeConditionFixedProbability.h  AutoMoDeConditionGrayFloor.cpp  AutoMoDeConditionGrayFloor.h  AutoMoDeConditionInvertedNeighborsCount.cpp  (+9 more)
